# testWebApiReader

WebApiView/: CMakeLists.txt  DataBase.cpp  DataBase.h  MainWindow.cpp  MainWindow.h  WebReader.cpp  WebReader.h  apiRecordView.qml  apiTableView.qml  qrc.qrc
WebApiView/ApiTableWidget/: ApiTableModel.cpp  ApiTableModel.h  ApiTableWidget.cpp  ApiTableWidget.h
